apps/cluster-based/kapp/03-ytt/04-prometheus/prometheus.yaml
#@ load("@ytt:data", "data")
#@ load("@ytt:base64", "base64")
---
#@ if data.values.prometheus.deploy:
apiVersion: v1
kind: Namespace
metadata:
  name: tanzu-system-monitoring
---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  labels:
    app: prometheus-server
  name: prometheus-server-httpproxy
  namespace: tanzu-system-monitoring
spec:
  routes:
  - conditions:
    - prefix: /
    pathRewritePolicy:
      replacePrefix:
      - prefix: /
        replacement: /
    services:
    - name: prometheus-server
      port: 80
  virtualhost:
    fqdn: #@ "prometheus." + data.values.shared.ingress
